# DIWNR

./: .pre-commit-config.yaml  Makefile  README.md  camille.service  exercises.yaml  main.py  pyproject.toml
