[project]
name = "DIWNR"
version = "0.1.0"
description = ""
authors = ["Diego Dorn", "Camille Berger"]
requires-python = ">=3.12.0"
dependencies = [
    "openai>=1.57.4",
    "pyyaml>=6.0.2",
    "streamlit>=1.41.1",
]


[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']
